<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pizza_con_amore.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_restraunt_menu"
        android:name="com.example.pizza_con_amore.ui.FoodItemDetailsFragment"
        android:label="@string/menu_favourites"
        tools:layout="@layout/fragment_food_item_details" />

    <fragment
        android:id="@+id/nav_admin_add"
        android:name="com.example.pizza_con_amore.ui.AdminAddUpdateFragment"
        android:label="@string/my_cart"
        tools:layout="@layout/fragment_admin_add_update" />
    <fragment
        android:id="@+id/nav_admin_lunch"
        android:name="com.example.pizza_con_amore.ui.AdminLunchConfigFragment"
        android:label="fragment_admin_lunch_configurator"
        tools:layout="@layout/fragment_admin_lunch_configurator" />
</navigation>