<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activities.WelcomeActivity">

    <ImageView
        android:id="@+id/welcome_screen_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/foreground_design"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_pizza_steam" />

    <TextView
        android:id="@+id/welcome_text_header"
        style="@style/all_text_field_formatting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/caveat_medium"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="144sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".05" />

    <TextView
        android:id="@+id/welcome_text_tag"
        style="@style/all_text_field_formatting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_tagline"
        android:textAlignment="center"
        android:textColor="@color/text_white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text_header" />


    <Button
        android:id="@+id/button_register"
        style="@style/all_text_field_formatting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background_design"
        android:onClick="register"
        android:padding="28dp"
        android:text="@string/register"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/welcome_screen_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text_tag"
        app:layout_constraintWidth_percent=".5" />


    <TextView
        android:id="@+id/button_sign_in"
        style="@style/all_text_field_formatting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="login"
        app:layout_constraintTop_toBottomOf="@+id/button_register" />


</androidx.constraintlayout.widget.ConstraintLayout>