<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activities.RegistrationActivity">


    <ImageView
        android:id="@+id/welcome_screen_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/foreground_design"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_pizza_steam" />


    <TextView
        android:id="@+id/register_text_header"
        style="@style/all_text_field_formatting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/caveat_medium"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="144sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/register_text_tag"
        style="@style/all_text_field_formatting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/text_white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_text_header" />

    <EditText
        android:id="@+id/register_name"
        style="@style/all_text_field_formatting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#CCCCCC"
        android:drawableStart="@drawable/icon_resize_user"
        android:drawablePadding="13dp"
        android:hint="@string/full_name"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textColorHint="@color/text_white"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_text_tag"
        app:layout_constraintWidth_percent=".6" />

    <EditText
        android:id="@+id/register_mail"
        style="@style/all_text_field_formatting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="#CCCCCC"
        android:drawableStart="@drawable/icon_resize_email"
        android:drawablePadding="13dp"
        android:hint="@string/e_mail"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textColorHint="@color/text_white"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_name"
        app:layout_constraintWidth_percent=".6" />

    <EditText
        android:id="@+id/register_password"
        style="@style/all_text_field_formatting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="#CCCCCC"
        android:drawableStart="@drawable/icon_resize_password"
        android:drawablePadding="13dp"
        android:hint="@string/password"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textColorHint="@color/text_white"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_mail"
        app:layout_constraintWidth_percent=".6" />


    <Button
        android:id="@+id/button_register"
        style="@style/all_text_field_formatting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background_design"
        android:onClick="end_register"
        android:padding="28dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@+id/welcome_screen_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password"
        app:layout_constraintVertical_bias="0.164"
        app:layout_constraintWidth_percent=".5" />

    <TextView

        android:id="@+id/textView3"
        style="@style/all_text_field_formatting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Уже зарегистрированы? "
        android:textColor="@color/text_white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/welcome_screen_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_register"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        style="@style/all_text_field_formatting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-> Войти "
        android:textColor="@color/primary_color3"
        android:textSize="48sp"
        android:textStyle="bold"
        android:onClick="login"
        app:layout_constraintBottom_toBottomOf="@+id/welcome_screen_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/button_register"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>